--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/Images/House.png" type="image/x-icon">
     <title>Aiswarjo's Websites</title>
-    <link rel="stylesheet" href="/styles/index.css">
+    <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
     <Header class="Header">Aiswarjo's first Website</Header>
